<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.nic.publictax.activity.ViewNutriGarden" />
    </data>

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/background"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/title_tv"
                    style="@style/font_circular_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/view_data"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp" />


                <ImageView
                    android:id="@+id/back_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@mipmap/back_arrow"
                    android:contentDescription="@string/back_icon" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>



        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_above="@id/developer_text"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/select_fin_year_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_20dp"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginRight="@dimen/margin_left_20dp"
                    android:text="@string/select_fin_year"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp"
                    style="@string/font_circular_bold" />

                <RelativeLayout
                    android:id="@+id/select_fin_year_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header"
                    android:layout_below="@+id/select_fin_year_tv"
                    android:layout_marginLeft="@dimen/margin_left_20dp"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginRight="@dimen/margin_left_20dp"
                    android:background="@drawable/rectangle_box"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="15dp"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="visible"
                        style="@string/font_normal"
                        tools:ignore="RelativeOverlap" />

                    <Spinner
                        android:id="@+id/fin_year_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center" />

                </RelativeLayout>

                <TextView
                    android:layout_below="@+id/select_fin_year_layout"
                    android:id="@+id/select_self_group_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_20dp"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginRight="@dimen/margin_left_20dp"
                    android:text="@string/select_self_help_group"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp"
                    style="@string/font_circular_bold" />

                <RelativeLayout
                    android:id="@+id/self_group_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/header"
                    android:layout_below="@+id/select_self_group_tv"
                    android:layout_marginLeft="@dimen/margin_left_20dp"
                    android:layout_marginTop="@dimen/padding"
                    android:layout_marginRight="@dimen/margin_left_20dp"
                    android:background="@drawable/rectangle_box"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="15dp"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="visible"
                        style="@string/font_normal"
                        tools:ignore="RelativeOverlap" />

                    <Spinner
                        android:id="@+id/self_group_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_below="@+id/self_group_layout"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/pending_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fadeScrollbars="false"
                        android:scrollbarSize="4dp"
                        android:scrollbars="vertical"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/not_found_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pending_list"
                        android:text="No Projects Found!"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold"
                        android:visibility="gone" />


                </RelativeLayout>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>
        <TextView
            android:id="@+id/developer_text"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:padding="15dp"
            android:text="@string/software_designed_amp_developed_by_nic"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            android:background="@drawable/background"
            style="@string/font_circular_medium" />


    </RelativeLayout>
</layout>